--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-crazy.hotel.url=localhost:8080/CrazyHotel
-best.hotel.url=localhost:8080/BestHotel
+crazy.hotel.url=localhost:8080
+best.hotel.url=localhost:8080
