--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.8</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.wimdeblauwe</groupId>
+            <artifactId>error-handling-spring-boot-starter</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
